# auto_flow

./: .env_test  .geminiignore  .gitattributes  .gitignore  .gitignore_for_public  .gitmodules  GEMINI.md  README.md  __main__.py  __main__.py.py  docker-compose.yml  ensure_pk_system_synced_and_readonly after.bat  ensure_pk_system_synced_and_readonly.bat  ensure_project_push_to_github_light.bat  ensure_project_push_to_github_light.py  foo.x 백업.bat  main.py  pk_gemini_manual.md  pk_startup.bat  pyproject.toml  pytest.ini  run.bat  run.cmd  run.lnk  temp_alert.py  test.bat  test_debug_log.py  test_import_new.py  test_user_import.py
af_docs/: ARCHITECTURE.md  INSTALLATION.md
af_todo/: code_plan_for_auto_flow.py
archived/: pk_memo_how.tar  pk_memo_working.tar
assets/: git submodule add pk_system .bat
docs/: API.md  ARCHITECTURE.md  INSTALLATION.md
etc/: LM-100 Spindle 내구성 시험이력(박정훈).xlsx  LM-100 Spindle 내구성 시험이력(박정훈).xlsx 백업.bat  etc.avif  긴급메모.ini
pk_deprecated/: # .pk_pnxs.py  # aes_decrypt.py  # aes_encrypt.py  # auto_load_and_play_by_creation_date.py  # collect_magnet_set_from_nyaa_si.py  # ensure_env_var_completed_2024.py  # ensure_env_var_completed_2025_11_23.py  # ensure_pk_enabled_windows.py  # ensure_pk_wrapper_executed.cmd  # ensure_printed.py  # ensure_roi_registered.py  # ensure_routine_pk_gemini_enabled.py  # ensure_spoken_legacy.py  (+19 more)
pk_internal_tools/pk_web_server/: Dockerfile  __init__.py  database.py  main.py  pyproject.toml
pk_internal_tools/pk_web_server/routers/: auth.py  dashboard.py  health.py  memos.py  p110m_dashboard.py
scripts/: run.bat  (+9 more)
(+2207 files in other folders)
